# tide

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  a.out
.github/workflows/: ci.yml
compiler/tidec/: Cargo.toml
compiler/tidec/src/: main.rs
compiler/tidec_abi/: Cargo.toml
compiler/tidec_abi/src/: layout.rs  lib.rs  size_and_align.rs  target.rs
compiler/tidec_abi/src/calling_convention/: function.rs
compiler/tidec_codegen_llvm/: Cargo.toml
compiler/tidec_codegen_llvm/src/: builder.rs  context.rs  entry.rs  lib.rs  ssa.rs  ssa_traits.rs  traits.rs
compiler/tidec_codegen_llvm/src/lir/: lir_body_metadata.rs  lir_ty.rs  mod.rs  types.rs
compiler/tidec_codegen_ssa/: Cargo.toml
compiler/tidec_codegen_ssa/src/: entry.rs  lib.rs  lir.rs  traits.rs
compiler/tidec_codgen_llvm/: Cargo.toml  LLVM_18-0_COMPILATION.md
compiler/tidec_codgen_llvm/docs/: LLVM_18-0_COMPILATION.md
compiler/tidec_codgen_llvm/src/: lib.rs  main.rs
compiler/tidec_lexer/: Cargo.toml
compiler/tidec_lir/: Cargo.toml
compiler/tidec_lir/src/: basic_blocks.rs  layout_ctx.rs  lib.rs  lir.rs  syntax.rs
compiler/tidec_lir/src/lir/: mod.rs  syntax.rs
compiler/tidec_log/: Cargo.toml
compiler/tidec_log/src/: lib.rs
compiler/tidec_utils/: Cargo.toml
compiler/tidec_utils/src/: idx.rs  index_slice.rs  index_vec.rs  lib.rs  variadic_log_macros.rs
